# monomana

./: Cargo.toml  README.md  build.rs  plan.md
src/: _monomana  cli.rs  completion.rs  detect.rs  exec.rs  main.rs  workspace.rs
