[package]
name = "monomana"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
clap_complete = "4.5.40"
anyhow = "1.0"
walkdir = "2.4"
dirs = "5.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
globset = "0.4"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.8"
